Fix: links were not visible in internal info in video tutorial scripts

--- a/wa_help_style/webassign_help.css
+++ b/wa_help_style/webassign_help.css
@@ -610,3 +610,6 @@ div.MathJax_Display {
     -moz-border-radius: 6px;
     border-radius: 6px;
 }
+.vtscript .audience-internal a, .vtscript .audience-internal a:link, .vtscript .audience-internal a:visited {
+    color: #A5D8FF;
+}
